[gd_scene load_steps=3 format=3 uid="uid://dxlkcri2l6axx"]

[ext_resource type="Script" uid="uid://d3ew67gpty388" path="res://scripts/ToolPopup.gd" id="1"]
[ext_resource type="Script" uid="uid://dh82b1oovpnjp" path="res://scripts/Slot.gd" id="2"]

[node name="ToolPopup" type="Panel"]
custom_minimum_size = Vector2(260, 220)
script = ExtResource("1")

[node name="Grid" type="GridContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 0.75
columns = 3

[node name="SlotTemplate" type="Panel" parent="Grid"]
visible = false
self_modulate = Color(0.25, 0.25, 0.25, 1)
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
script = ExtResource("2")

[node name="BtnStart" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.8
anchor_right = 0.5
anchor_bottom = 0.8
text = "Старт"

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
